--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ psycopg2-binary = "^2.9.9"
 django = "^5.1.2"
 django-extensions = "^3.2.3"
 environs = "^11.0.0"
+geopy = "^2.4.1"
+python-dateutil = "^2.9.0.post0"
+flake8 = "^7.1.1"
+isort = "^5.13.2"
+django-tz-detect = "^0.5.0"
 
 
 [build-system]
